@@ -47,6 +47,8 @@
 #include <tny-camel-shared.h>
 #include <tny-status.h>
 
+#include <tny-camel-default-connection-strategy.h>
+
 #include "tny-session-camel-priv.h"
 #include "tny-camel-common-priv.h"
 
@@ -1367,6 +1369,7 @@ tny_camel_account_instance_init (GTypeInstance *instance, gpointer g_class)
 	TnyCamelAccount *self = (TnyCamelAccount *)instance;
 	TnyCamelAccountPriv *priv = TNY_CAMEL_ACCOUNT_GET_PRIVATE (self);
 
+	priv->con_strat = tny_camel_default_connection_strategy_new ();
 	priv->queue = _tny_camel_queue_new (self);
 	priv->delete_this = NULL;
 	priv->is_ready = FALSE;
@@ -1738,6 +1741,24 @@ tny_camel_account_is_ready (TnyAccount *self)
 }
 
 
+static TnyConnectionStrategy* 
+tny_camel_account_get_connection_strategy (TnyAccount *self)
+{
+	TnyCamelAccountPriv *priv = TNY_CAMEL_ACCOUNT_GET_PRIVATE (self);
+	return TNY_CONNECTION_STRATEGY (g_object_ref (priv->con_strat));
+}
+
+static void 
+tny_camel_account_set_connection_strategy (TnyAccount *self, TnyConnectionStrategy *strategy)
+{
+	TnyCamelAccountPriv *priv = TNY_CAMEL_ACCOUNT_GET_PRIVATE (self);
+	g_object_unref (priv->con_strat);
+	priv->con_strat = TNY_CONNECTION_STRATEGY (g_object_ref (strategy));
+	return;
+}
+
+
+
 
 
 typedef struct 
@@ -1993,7 +2014,6 @@ tny_camel_account_finalize (GObject *object)
 	/* g_static_rec_mutex_free (priv->cancel_lock); */
 	g_free (priv->cancel_lock);
 	priv->cancel_lock = NULL;
-
 	priv->inuse_spin = FALSE;
 
 	if (priv->options)
@@ -2040,6 +2060,7 @@ tny_camel_account_finalize (GObject *object)
 	g_static_rec_mutex_unlock (priv->service_lock);
 
 	g_object_unref (priv->queue);
+	g_object_unref (priv->con_strat);
 
 	camel_exception_free (priv->ex);
 
@@ -2089,6 +2110,8 @@ tny_account_init (gpointer g, gpointer iface_data)
 	klass->start_operation_func = tny_camel_account_start_operation;
 	klass->stop_operation_func =  tny_camel_account_stop_operation;
 	klass->is_ready_func = tny_camel_account_is_ready;
+	klass->set_connection_strategy_func = tny_camel_account_set_connection_strategy;
+	klass->get_connection_strategy_func = tny_camel_account_get_connection_strategy;
 
 	return;
 }
