@@ -48,7 +48,8 @@ libtinymail_1_0_headers = \
 	tny-send-queue.h \
 	tny-password-getter.h \
 	tny-merge-folder.h \
-	tny-combined-account.h
+	tny-combined-account.h \
+	tny-connection-strategy.h
 
 libtinymail_1_0_la_SOURCES = \
 	$(libtinymail_1_0_headers) \
@@ -91,6 +92,7 @@ libtinymail_1_0_la_SOURCES = \
 	tny-combined-account.c \
 	tny-idle-stopper.c \
 	tny-progress-info.c \
+	tny-connection-strategy.c \
 	$(private_headers)
 
 libtinymail_1_0_la_LIBADD = $(LIBTINYMAIL_LIBS)
