@@ -24,6 +24,7 @@
 #include <glib-object.h>
 #include <tny-shared.h>
 #include <tny-status.h>
+#include <tny-connection-strategy.h>
 
 G_BEGIN_DECLS
 
@@ -108,6 +109,8 @@ struct _TnyAccountIface
 	void (*start_operation_func) (TnyAccount *self, TnyStatusDomain domain, TnyStatusCode code, TnyStatusCallback status_callback, gpointer status_user_data);
 	void (*stop_operation_func) (TnyAccount *self, gboolean *canceled);
 	gboolean (*is_ready_func) (TnyAccount *self);
+	TnyConnectionStrategy* (*get_connection_strategy_func) (TnyAccount *self);
+	void (*set_connection_strategy_func) (TnyAccount *self, TnyConnectionStrategy *strategy);
 
 	/* Signals*/
 	void (*connection_status_changed) (TnyAccount *self, TnyConnectionStatus status);
@@ -146,6 +149,8 @@ gboolean tny_account_matches_url_string (TnyAccount *self, const gchar *url_stri
 void tny_account_start_operation (TnyAccount *self, TnyStatusDomain domain, TnyStatusCode code, TnyStatusCallback status_callback, gpointer status_user_data);
 void tny_account_stop_operation (TnyAccount *self, gboolean *canceled);
 gboolean tny_account_is_ready (TnyAccount *self);
+TnyConnectionStrategy* tny_account_get_connection_strategy (TnyAccount *self);
+void tny_account_set_connection_strategy (TnyAccount *self, TnyConnectionStrategy *strategy);
 
 
 G_END_DECLS
