@@ -35,5 +35,6 @@
 #include <tny-store-account.h>
 #include <tny-stream.h>
 #include <tny-transport-account.h>
+#include <tny-connection-strategy.h>
 
 #endif
